# chess

./: .gitignore  Cargo.toml  README.md
assets/: Cargo.toml  svg_to_png.sh
assets/pieces/: svg_to_png.sh
assets/src/: colors.rs  lib.rs
assets/src/board/: mod.rs
assets/src/pieces/: mod.rs
assets/src/pieces/california/: mod.rs
assets/src/sounds/: mod.rs
engine/: Cargo.toml
gui/: Cargo.toml
gui/src/: end_scene.rs  game_scene.rs  lib.rs  main.rs  window_configuration.rs
gui/src/assets/buttons/: mod.rs
gui/src/scenes/: game.rs  game_over.rs  manager.rs  mod.rs  settings.rs
state/: Cargo.toml
state/src/: board.rs  board_coordinates.rs  castling_rights.rs  game_result.rs  game_state.rs  initial_position.rs  lib.rs  move.rs  move_counter.rs  square.rs
state/src/board/: coordinates.rs  initial_position.rs  mod.rs
state/src/components/: mod.rs  piece.rs
state/src/game/: player.rs  square.rs
state/src/moves/: mod.rs  move_counter.rs  special_move.rs
