[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "../state" }
assets = { path = "../assets" }

macroquad = "0.3.25"
