[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.2", features = ["audio"] }
state = { path = "../state" }

